fixing buttons alignment

--- a/frontend/src/pages/signUp/SignUpPage.scss
+++ b/frontend/src/pages/signUp/SignUpPage.scss
@@ -62,6 +62,8 @@
           }
 
           button {
+            display: flex;
+            align-items: center;
             width: auto;
             border-radius: 4px;
             background-color: #e50914;
